Closed Bug 851954 Opened 13 years ago Closed 13 years ago

Uninitialized variables in nsSVGFELightingElement::Filter

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: Ms2ger, Assigned: dzbarsky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

distantLight and pointLight can be used uninitialized. David, could you fix that? (Maybe make them nsRefPtr, actually.)
Attached patch PatchSplinter Review
No point in using nsRefPtr
Assignee: nobody → dzbarsky
Status: NEW → ASSIGNED
Attachment #725922 - Flags: review?(Ms2ger)
Comment on attachment 725922 [details] [diff] [review] Patch Review of attachment 725922 [details] [diff] [review]: ----------------------------------------------------------------- Thanks.
Attachment #725922 - Flags: review?(Ms2ger) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: