[Bug 851954] Uninitialized variables in nsSVGFELightingElement::Filter r=Ms2ger